--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,48 @@
-Flask==0.10.1
-gunicorn==19.4.5
-heroku==0.1.4
+appnope==0.1.0
+argh==0.26.2
+bleach==2.1.3
+click==6.7
+decorator==4.2.1
+entrypoints==0.2.3
+Flask==0.12.2
+html5lib==1.0.1
+ipykernel==4.8.2
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.1.2
 itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-python-dateutil==1.5
-requests==2.9.1
-Werkzeug==0.11.5
+jedi==0.11.1
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+MarkupSafe==1.0
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.4.0
+pandocfilters==1.4.2
+parso==0.1.1
+pathtools==0.1.2
+pexpect==4.4.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
+python-dateutil==2.7.0
+PyYAML==3.12
+pyzmq==17.0.0
+qtconsole==4.3.1
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+six==1.11.0
+terminado==0.8.1
+testpath==0.3.1
+tornado==5.0
+traitlets==4.3.2
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.1.4
